# TestOS

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.run/: Clean Cargo Build.run.xml  Run TestOS.run.xml
kernel/: Cargo.toml
kernel/src/: kernel.rs  main.rs
kernel/src/api/: display.rs
kernel/src/drivers/display/: graphics.rs  mod.rs  text.rs
kernel/src/internal/: allocator.rs  gdt.rs  idt.rs  memory.rs  mod.rs  serial.rs
kernel/src/managers/: display.rs
kernel/src/systems/: display.rs
