[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.6"
embedded-graphics = "0.8.1"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
log = "0.4.20"
pic8259 = "0.10.4"
uart_16550 = "0.3.0"
volatile = "0.5.1"
x86_64 = "0.14.11"